--- a/features.html
+++ b/features.html
@@ -19,6 +19,7 @@
           <div class="linespinner"></div>
         </div>
       </div>
+
     <header id="header" class="d-none">
         <div class="container">
             <div class="row">
@@ -51,6 +52,29 @@
                         </div>
                         
                         <div class=""><a class="" href="contact.html">Contact</a></div>
+                    </div>
+                    <div class="nav-mini col-md-6 col-lg-4">
+                        <div><a href="">Home</a></div>
+                        <div class="submenu">
+                            <div class="d-flex justify-content-between "><a class="mini-dropdown" href="">Discovery</a><i class="fa-solid fa-chevron-down"></i></div>
+                        <div class="drop-down-first">
+                            <a href="">Features</a>
+                            <a href="">Our Team</a>
+                            <a href="">Pricing Plans</a>
+                            <a href="">Latest Blogs</a>
+                        </div>
+                        </div>
+                        <div class="submenu">
+                            <div class="d-flex justify-content-between "><a class="mini-dropdown" href="">Pages</a><i class="fa-solid fa-chevron-down"></i></div>
+                        <div class="drop-down-second">
+                            <a href="about-us.html">About Us</a>
+                            <a href="features.html">Features</a>
+                            <a href="faq's.html">Faq's</a>
+                            <a href="blog.html">Blog</a>
+                        </div>
+                        </div>
+                        <div><a href="">Contack</a>
+                        </div>
                     </div>
                     <div class="signin col-md-4 col-lg-4">
                         <a href="" class="btn-nav-line">Sign In</a>
