--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="nav-mini col-md-6 col-lg-4">
                         <div><a href="">Home</a></div>
                         <div class="submenu">
-                            <div class="d-flex justify-content-between"><a href="">Discovery</a><i class="fa-solid fa-chevron-down"></i></div>
+                            <div class="d-flex justify-content-between "><a class="mini-dropdown" href="">Discovery</a><i class="fa-solid fa-chevron-down"></i></div>
                         <div class="drop-down-first">
                             <a href="">Features</a>
                             <a href="">Our Team</a>
@@ -64,12 +64,12 @@
                         </div>
                         </div>
                         <div class="submenu">
-                            <div class="d-flex justify-content-between"><a href="">Pages</a><i class="fa-solid fa-chevron-down"></i></div>
+                            <div class="d-flex justify-content-between "><a class="mini-dropdown" href="">Pages</a><i class="fa-solid fa-chevron-down"></i></div>
                         <div class="drop-down-second">
-                            <a href="">About Us</a>
-                            <a href="">Features</a>
-                            <a href="">Faq's</a>
-                            <a href="">Blog</a>
+                            <a href="about-us.html">About Us</a>
+                            <a href="features.html">Features</a>
+                            <a href="faq's.html">Faq's</a>
+                            <a href="blog.html">Blog</a>
                         </div>
                         </div>
                         <div><a href="">Contack</a>
